--- a/project_zobo/project_zobo/templates/RBhomepage.html
+++ b/project_zobo/project_zobo/templates/RBhomepage.html
@@ -5434,7 +5434,7 @@ window.application = new Application();
 			</rect>
 		</svg>
 	</div>
-	<a href = "page_2"><div id="Group_55"> <!bottom left get started>
+	<a href = "OpenAccount"><div id="Group_55"> <!bottom left get started>
 		<svg class="Rectangle_39_g">
 			<rect fill="rgba(0,229,1,1)" id="Rectangle_39_g" rx="25" ry="25" x="0" y="0" width="173" height="50">
 			</rect>
